// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should snapshot match async-modules: a 1`] = `
"import { resolveStyles } from 'treat';

const a = \\"a-style_EB8aX\\";
var a_treat = {
	a: a
};

var styleRefs = /*#__PURE__*/Object.freeze({
	__proto__: null,
	a: a,
	'default': a_treat
});

console.log(
	resolveStyles(null, styleRefs),
);
"
`;

exports[`it should snapshot match async-modules: bundle.css 1`] = `".a-style_EB8aX{color:red}"`;

exports[`it should snapshot match async-modules: main 1`] = `
"import('./a-397bd8b2.js')
	.then(() => {

	});
"
`;

exports[`it should snapshot match basic-no-theme: bundle.css 1`] = `".main-style_-O-a2{color:red}"`;

exports[`it should snapshot match basic-no-theme: main 1`] = `
"import { resolveStyles } from 'treat';

const myClass = \\"main-style_-O-a2\\";
var main_treat = {
	myClass: myClass
};

var styleRefs = /*#__PURE__*/Object.freeze({
	__proto__: null,
	myClass: myClass,
	'default': main_treat
});

console.log(
	resolveStyles(null, styleRefs),
);
"
`;

exports[`it should snapshot match basic-with-theme: bundle.css 1`] = `".main-style_YnB3c{color:pink}.main-style_4mkE9_theme-theme_hdkV{color:red}"`;

exports[`it should snapshot match basic-with-theme: main 1`] = `
"import { resolveStyles } from 'treat';

const myTheme = \\"_theme-theme_hdkV\\";

const plainClass = \\"main-style_YnB3c\\";
const themedClass = \\"$main-style_4mkE9\\";
var main_treat = {
	plainClass: plainClass,
	themedClass: themedClass
};

var styleRefs = /*#__PURE__*/Object.freeze({
	__proto__: null,
	plainClass: plainClass,
	themedClass: themedClass,
	'default': main_treat
});

console.log(
	resolveStyles(myTheme, styleRefs),
);
"
`;

exports[`it should snapshot match module-order: bundle.css 1`] = `".a-style_e7kHH{color:red}.b-style_GDtJa{color:#00f}"`;

exports[`it should snapshot match module-order: main 1`] = `
"import { resolveStyles } from 'treat';

const a = \\"a-style_e7kHH\\";
var a_treat = {
	a: a
};

var styleRefs = /*#__PURE__*/Object.freeze({
	__proto__: null,
	a: a,
	'default': a_treat
});

const b = \\"b-style_GDtJa\\";
var b_treat = {
	b: b
};

var styleRefs$1 = /*#__PURE__*/Object.freeze({
	__proto__: null,
	b: b,
	'default': b_treat
});

console.log(
	resolveStyles(null, styleRefs$1),
);

console.log(
	resolveStyles(null, styleRefs),
);
"
`;

exports[`it should snapshot match using-node-modules: bundle.css 1`] = `".main-style_nzFr5{color:rgba(255,205,100,.7)}"`;

exports[`it should snapshot match using-node-modules: main 1`] = `
"import { resolveStyles } from 'treat';

const myClass = \\"main-style_nzFr5\\";
var main_treat = {
	myClass: myClass
};

var styleRefs = /*#__PURE__*/Object.freeze({
	__proto__: null,
	myClass: myClass,
	'default': main_treat
});

console.log(
	resolveStyles(null, styleRefs),
);
"
`;
